--- a/index.html
+++ b/index.html
@@ -11,60 +11,83 @@
     <body>
         <h1>GeeksforGeeks Survey Form</h1>
         <form action="script.js">
-            <fieldset>
-                <label for="uname">Name</label><br>
-            <input type="text" id="uname" name="uname" placeholder="Enter your name" required><br>
-            </fieldset>
-            <fieldset>
-                <label for="uemail">Email</label><br>
-            <input type="email" id="uemail" name="uemail" placeholder="Enter your email" required><br>
-            </fieldset>
-            <fieldset><label for="uage">Age</label><br>
-                <input type="number" id="uage" name="uage" placeholder="Enter your age" min="18"><br></fieldset>
-            <fieldset></fieldset>
-            <fieldset></fieldset>
-            <fieldset></fieldset>
-            <fieldset></fieldset>
-            <fieldset></fieldset>
+            <div>
+                <label for="uname">Name</label>
+                <input type="text" id="uname" name="uname" placeholder="Enter your name" required>
+            </div>               
+
+            <div>
+                <label for="uemail">Email</label>
+                <input type="email" id="uemail" name="uemail" placeholder="Enter your email" required>
+            </div>
+
+            <div>
+                <label for="uage">Age</label>
+                <input type="number" id="uage" name="uage" placeholder="Enter your age" min="18">
+            </div>
+
+            <div>
+                <label for="description">Which best option describes you?</label>
+                <select name="description" id="description" required>
+                    <option value="Student">Student</option>
+                    <option value="Worker">Worker</option>
+                    <option value="None">None</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="recommend">Would you recommend this site?</label>
+                <label for="recommend-yes">
+                    <input type="radio" id="recommend-yes" name="recommend" value="Yes">Yes
+                </label>
+                <label for="recommend-no">
+                    <input type="radio" id="recommend-no" name="recommend" value="No">No
+                </label>
+                <label for="recommend-maybe">
+                    <input type="radio" id="recommend-maybe" name="recommend" value="Maybe">Maybe
+                </label>
+            </div>
+
+            <div>
+                <label for="langframe">Language and Frameworks known <small>(Check all that apply)</small></label>
+                <label for="langframe-c">
+                    <input type="checkbox" id="langframe-c" name="langframe" value="C">C
+                </label>
+                <label for="langframe-cpp">
+                <input type="checkbox" id="langframe-cpp" name="langframe" value="C++">C++
+                </label>
+                <label for="langframe-csharp">
+                    <input type="checkbox" id="langframe-csharp" name="langframe" value="C#">C#
+                </label>
+                <label for="langframe-java">
+                    <input type="checkbox" id="langframe-java" name="langframe" value="Java">Java
+                </label>
+                <label for="langframe-python">
+                    <input type="checkbox" id="langframe-python" name="langframe" value="Python">Python
+                </label>
+                <label for="langframe-js">
+                    <input type="checkbox" id="langframe-js" name="langframe" value="JavaScript">JavaScript
+                </label>
+                <label for="langframe-react">
+                    <input type="checkbox" id="langframe-react" name="langframe" value="React">React
+                </label>
+                <label for="langframe-angular">
+                    <input type="checkbox" id="langframe-angular" name="langframe" value="Angular">Angular
+                </label>
+                <label for="langframe-django">
+                    <input type="checkbox" id="langframe-django" name="langframe" value="Django">Django
+                </label>
+                <label for="langframe-spring">
+                    <input type="checkbox" id="langframe-spring" name="langframe" value="Spring">Spring
+                </label>
+            </div>
             
+            <div>
+                <label for="comments">Any comments or suggestions</label>
+                <textarea name="comments" id="comments" placeholder="(Optional)"></textarea>
+            </div>
             
-            <label for="description">Which best option describes you?</label><br>
-            <select name="description" id="description" required><br>
-                <option value="Student">Student</option><br>
-                <option value="Worker">Worker</option><br>
-                <option value="None">None</option><br>
-            </select><br>
-            <label for="recommend">Would you recommend this site?</label><br>
-            <input type="radio" id="recommend" name="recommend" value="Yes">
-                <label for="recommend">Yes</label>
-            <input type="radio" id="recommend" name="recommend" value="No">
-                <label for="recommend">No</label>
-            <input type="radio" id="recommend" name="recommend" value="Maybe">
-                <label for="recommend">Maybe</label><br>
-            <label for="langframe">Language and Frameworks known <small>(Check all that apply)</small></label><br>
-            <input type="checkbox" id="langframe" name="langframe" value="C">
-            <label for="langframe">C</label><br>
-            <input type="checkbox" id="langframe" name="langframe" value="C++">
-            <label for="langframe">C++</label><br>
-            <input type="checkbox" id="langframe" name="langframe" value="C#">
-            <label for="langframe">C#</label><br>
-            <input type="checkbox" id="langframe" name="langframe" value="Java">
-            <label for="langframe">Java</label><br>
-            <input type="checkbox" id="langframe" name="langframe" value="Python">
-            <label for="langframe">Python</label><br>
-            <input type="checkbox" id="langframe" name="langframe" value="JavaScript">
-            <label for="langframe">JavaScript</label><br>
-            <input type="checkbox" id="langframe" name="langframe" value="React">
-            <label for="langframe">React</label><br>
-            <input type="checkbox" id="langframe" name="langframe" value="Angular">
-            <label for="langframe">Angular</label><br>
-            <input type="checkbox" id="langframe" name="langframe" value="Django">
-            <label for="langframe">Django</label><br>
-            <input type="checkbox" id="langframe" name="langframe" value="Spring">
-            <label for="langframe">Spring</label><br>
-            <label for="comments">Any comments or suggestions</label><br>
-            <textarea name="comments" id="comments" placeholder="(Optional)"></textarea><br>
-            <button>Submit</button><br>
+            <button>Submit</button>
         </form>
         <script src="script.js" async defer></script>
     </body>
