--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>GeeksforGeeks Survey Form</h1>
-        <form action="script.js">
+        <form>
             <div>
                 <label for="uname">Name</label>
                 <input type="text" id="uname" name="uname" placeholder="Enter your name" required>
@@ -28,7 +28,7 @@
 
             <div>
                 <label for="description">Which best option describes you?</label>
-                <select name="description" id="description" required>
+                <select name="description" id="description">
                     <option value="Student">Student</option>
                     <option value="Worker">Worker</option>
                     <option value="None">None</option>
@@ -36,7 +36,7 @@
             </div>
 
             <div>
-                <label for="recommend">Would you recommend this site?</label>
+                <label>Would you recommend this site?</label>
                 <label for="recommend-yes">
                     <input type="radio" id="recommend-yes" name="recommend" value="Yes">Yes
                 </label>
@@ -49,7 +49,7 @@
             </div>
 
             <div>
-                <label for="langframe">Language and Frameworks known <small>(Check all that apply)</small></label>
+                <label>Language and Frameworks known <small>(Check all that apply)</small></label>
                 <label for="langframe-c">
                     <input type="checkbox" id="langframe-c" name="langframe" value="C">C
                 </label>
@@ -87,8 +87,8 @@
                 <textarea name="comments" id="comments" placeholder="(Optional)"></textarea>
             </div>
             
-            <button>Submit</button>
+            <button id="submit" type="submit">Submit</button>
         </form>
-        <script src="script.js" async defer></script>
+        <script src="script.js"></script>
     </body>
 </html>
