--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>GeeksforGeeks Survey Form</title>
-        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -23,12 +22,12 @@
 
             <div>
                 <label for="uage">Age</label>
-                <input type="number" id="uage" name="uage" placeholder="Enter your age" min="18">
+                <input type="number" id="uage" name="uage" placeholder="Enter your age" min="18" max="110" required>
             </div>
 
             <div>
                 <label for="description">Which best option describes you?</label>
-                <select name="description" id="description">
+                <select name="description" id="description" required>
                     <option value="Student">Student</option>
                     <option value="Worker">Worker</option>
                     <option value="None">None</option>
